2008-03-23  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Tell automake to not warn us about portabillity issues. Its too late
	  for that.

	* ChangeLog:
	  Surgery for the bugnumber.

2008-03-21  Marc-Andre Lureau <marcandre.lureau@gmail.com>

	* .svnignore, Makefile.am, autogen.sh, configure.in,
	help/manual/.svnignore, help/manual/C/ChangeLog,
	help/manual/C/Makefile.am, help/manual/C/gtk-doc-manual-C.omf.in,
	help/manual/C/gtk-doc-manual.xml, help/manual/ChangeLog,
	help/manual/Makefile.am, help/manual/gtk-doc-manual.omf.in,
	m4/.svnignore, omf.make, xmldocs.make:
	GNOME doc-utils migration.  Fixes #335239

2008-03-22  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.

=== Release 1.10 ===

2008-03-19  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* HACKING:
	  Prepare for release.

	* style.css:
	  Add fix for footnote positions.

2008-02-27  Stefan Kost  <ensonic@users.sf.net>

	patch by: Carlos Garnacho <carlos@imendio.com>

	* tools/gtk-doc.el:
	  Update emacs mode to work with emacs22. Fixes #513318.

2008-02-01  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	* tests/bugs/src/tester.h:
	  Improve tmpl parsing and add some more logging. Fixes #512154.

2008-01-30  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Add testcase for #512154.

2008-01-28  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Condense all the multiple newlines in the generated xml.

	* tests/gtk-doc.make:
	  Make sure the testsuite call the uninstalled scripts.

2008-01-24  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	  Unbreak fixxref. The index.sgml file should not have leading
	  whitespace. These were caused by indenting the xsl, which is dangerous
	  in case of <xsl:text>.

	* gtkdoc-fixxref.in:
	  Debug logging.

2008-01-21  Stefan Kost  <ensonic@users.sf.net>
