@@ -1,3 +1,14 @@
+2008-04-09  Stefan Kost  <ensonic@users.sf.net>
+
+	* HACKING:
+          Some releasing info.
+
+	* gtkdoc-mkdb.in:
+	  Print file/line number in warning.
+
+	* help/manual/C/gtk-doc-manual.xml:
+	  Some docs for what the <module>-overrides.txt file is for.
+
 2008-03-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* autogen.sh:
